FIxed text on safari

--- a/sites/music-bingo-categories/main.scss
+++ b/sites/music-bingo-categories/main.scss
@@ -95,6 +95,7 @@ section
   padding-bottom: 50px;
   .card-item
   {
+    position: relative;
     margin: 20px 0 0 0;
     max-width: 500px;
     width: 100%;
@@ -118,27 +119,36 @@ section
     width: 100%;
     height: 100%;
     border-radius: 5%;
-    filter: blur(3px);
-    box-shadow: -5px 10px 0px 0px rgba(0,0,0,0.75);
-    -webkit-box-shadow: -5px 10px 0px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: -5px 10px 0px 0px rgba(0,0,0,0.75);
-    transition: all .2s ease-in-out; 
-  }
-
-  p
-  {
-    position: absolute;
-    font-weight: 900;
     color: black;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    padding: 30% 0 25% 0;
-    margin: 0;
-    z-index: 100;
+    font-weight: 900;
     font-size: 25pt;
+    vertical-align: center;
+    line-height: 300px;
+    text-align: center;
+    box-shadow: -5px 10px 3px 3px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -5px 10px 3px 3px rgba(0,0,0,0.75);
+    -moz-box-shadow: -5px 10px 3px 3px rgba(0,0,0,0.75);
     transition: all .2s ease-in-out;
   }
+
+  // p
+  // {
+  //   position: absolute;
+  //   // text-anchor: middle center;
+  //   font-weight: 900;
+  //   color: black;
+  //   max-width: 500px;
+  //   width: 100%;
+  //   max-height: 300px;
+  //   height: 100%;
+  //   text-align: center;
+  //   // padding: 30% 0 0 0;
+  //   margin: 0;
+  //   z-index: 100;
+  //   font-size: 25pt;
+  //   transition: all .2s ease-in-out;
+  //   border: 1px solid black;
+  // }
 
   
     .card-link:hover .card
